created coming soon screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,21 +3,66 @@
 .page-container {
   height: 100vh;
   background-color: $background;
+  color: $text;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @mixin text-gradient {
+    background: linear-gradient(90deg,#d1aad7,#c88bc4 25.17%,#7b8fdd 50%,#86bff2 73.09%,#bbdef2);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-color: initial;
+    // background-image: linear-gradient(90deg, #502856, #683165 25.17%, #1f3178 50%, #0d4577 73.09%, #2f3335);
+  }
 
   .header {
     display: flex;
-    padding: 0 16em;
+    margin: 1.6em 0;
     justify-content: space-between;
 
     .menu-items-container {
-      color: $text;
+      display: flex;
       font-size: 16px;
+      font-family: circularStd, sans-serif;
+
+      &>div {
+        padding: 0 20px;
+        cursor: pointer;
+      }
     }
+
+    .hire-us-action {
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
+      background-image: linear-gradient(to bottom, #4145dc, #5c4dd0);
+      color: $text;
+      border: 0;
+      padding: 15px 30px;
+      border-radius: 35%;
+    }
+  }
+
+  .body-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20vh;
   }
 
   .body-tagline {
     font-size: 80px;
-    color: $text;
     line-height: 0.95;
+    // flex: 1;
+    margin-bottom: 40px;
+    text-align: center;
+    @include text-gradient;
+  }
+
+  .coming-soon {
+    font-size: 40px;
   }
 }
