--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,7 @@
   .body-container {
     flex: 1;
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -57,7 +58,7 @@
   }
 
   .body-tagline {
-    font-size: 80px;
+    font-size: 5em;
     line-height: 0.95;
     // flex: 1;
     margin-bottom: 40px;
@@ -65,8 +66,14 @@
     @include text-gradient;
   }
 
+  @media screen and (max-width: 850px) {
+    .body-tagline {
+      font-size: 2em;
+    }
+  }
+
   .coming-soon {
-    font-size: 40px;
+    font-size: 2.5em;
   }
 
   .footer {
