--- a/src/App.scss
+++ b/src/App.scss
@@ -58,22 +58,15 @@
   }
 
   .body-tagline {
-    font-size: 5em;
+    font-size: 5.5vw;
     line-height: 0.95;
-    // flex: 1;
     margin-bottom: 40px;
     text-align: center;
     @include text-gradient;
   }
 
-  @media screen and (max-width: 850px) {
-    .body-tagline {
-      font-size: 2em;
-    }
-  }
-
   .coming-soon {
-    font-size: 2.5em;
+    font-size: 2.5vw;
   }
 
   .footer {
