--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
   // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   //   sans-serif;
+  font-size: 100%;
   font-family: AkzidenzGroteskBQ-MedExt,
     sans-serif;
   -webkit-font-smoothing: antialiased;
