--- a/src/App.scss
+++ b/src/App.scss
@@ -58,7 +58,7 @@
   }
 
   .body-tagline {
-    font-size: 5.5vw;
+    font-size: 5em;
     line-height: 0.95;
     margin-bottom: 40px;
     text-align: center;
@@ -66,7 +66,16 @@
   }
 
   .coming-soon {
-    font-size: 2.5vw;
+    font-size: 2.5em;
+  }
+
+  @media screen and (max-width: 850px) {
+    .body-tagline {
+      font-size: 2.4em;
+    }
+    .coming-soon {
+      font-size: 1.4em;
+    }
   }
 
   .footer {
@@ -75,7 +84,7 @@
     font-family: CircularStd;
     background-color: $background-dark;
     padding: 10px 0;
-    font-size: 14px;
+    font-size: 0.8em;
     text-align: center;
   }
 }
