--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to bottom, #0d0d0f, #28293a);
 }
 
 code {
